src/test/testData/AnnotatorTestData.java
public class Test {
    public static void main(String[] args) {
        System.out.println("ocaml:website");
        System.out.println("ocaml:<error descr="Unresolved property">websit</error>");
    }
}